# tests

./: .env.example  .gitignore  .pre-commit-config.yaml  .talismanrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/app/: calculator.py  config.py  logger.py  logging_config.json
tests/: test_calculator.py
